2019-10-19  Jakub Jelinek  <jakub@redhat.com>

	PR target/92140
	* gcc.target/i386/pr92140.c: New test.
	* gcc.c-torture/execute/pr92140.c: New test.

2019-10-19  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.dg/Wnonnull.c: Add attributed function declarations for
	memcpy and strlen for Darwin.

2019-10-18  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/92157
	* gcc.dg/strlenopt-69.c: Disable test failing due to PR 92155.
	* gcc.dg/strlenopt-87.c: New test.

2019-10-18  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.target/arm/negdi-3.c: Update expected output to allow NEGS.

2019-10-18  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.dg/builtin-arith-overflow-3.c: New test.

2019-10-18  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.target/arm/negdi-3.c: Remove XFAIL markers.

2019-10-18  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.target/arm/pr53447-1.c: Remove XFAIL.
	* gcc.target/arm/pr53447-3.c: Remove XFAIL.
	* gcc.target/arm/pr53447-4.c: Remove XFAIL.

2019-10-18  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.target/arm/negdi-3.c: Add XFAILS.
	* gcc.target/arm/pr3447-1.c: Likewise.
	* gcc.target/arm/pr3447-3.c: Likewise.
	* gcc.target/arm/pr3447-4.c: Likewise.

2019-10-18  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/69455
	* gfortran.dg/pr69455_1.f90: New test.
	* gfortran.dg/pr69455_2.f90: Ditto.

2019-10-18  Andre Vieira  <andre.simoesdiasvieira@arm.com>

	* gcc.target/arm/multilib.exp: Add extra tests.

2019-10-18  Tobias Burnus  <tobias@codesourcery.com>

	PR fortran/91586
	* gfortran.dg/class_71.f90: New.

2019-10-18  Georg-Johann Lay  <avr@gjlay.de>

	Fix some fallout for small targets.

	PR testsuite/52641
	* gcc.c-torture/execute/20190820-1.c:
	Add dg-require-effective-target int32plus.
	* gcc.c-torture/execute/pr85331.c
	Add dg-require-effective-target double64plus.
	* gcc.dg/pow-sqrt-1.c: Same.
	* gcc.dg/pow-sqrt-2.c: Same.
	* gcc.dg/pow-sqrt-3.c: Same.
	* gcc.c-torture/execute/20190901-1.c: Same.