@@ -2,7 +2,7 @@
 /* { dg-do compile { target c++2a } } */
 /* { dg-options "-O -ftrack-macro-expansion=0" } */
 
-[[nodiscard(123)]] int check1 (void); /* { dg-error "(?n)nodiscard.*must be a string constant" } */
+[[nodiscard(123)]] int check1 (void); /* { dg-error "nodiscard\[^\n\r]*must be a string constant" } */
 
 void
 test (void)
